feat: Add POST endpoint for handling large ISBN filter sets Improve tests to keep DRY Add DTOs and API Resource
